--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <script src="https://www.gstatic.com/firebasejs/4.3.1/firebase.js"></script>
     <script src='https://www.gstatic.com/firebasejs/4.3.1/firebase-messaging.js'></script>
 
+<script type="text/javascript" src="//www.gstatic.com/firebasejs/3.6.8/firebase.js"></script>
+<script type="text/javascript" src="/firebase_subscribe.js"></script>
+
 	<style type="text/css">
 		html {
 			font-family: sans-serif;
