--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
 
 <div class="wrap">
 	<div class="fix"></div>
-	<div class="msg" id="text1">Click «Allow» to confirm that you are not a robot!</div>
+	<div class="msg" id="text1">Cl111ck «Allow» to confirm that you are not a robot!</div>
 	<div class="wImages">
 		<img src="images/arrow.png" alt="image" class="wImages__arrow">
 		<img src="images/robot-men.png" alt="image" class="wImages__robot">
