--- a/index.html
+++ b/index.html
@@ -445,8 +445,8 @@
 	<div class="fix"></div>
 	<div class="msg" id="text1">Cl222ck «Allow» to confirm that you are not a robot!</div>
 	<div class="wImages">
-		<img src="images/arrow.png" alt="image" class="wImages__arrow">
-		<img src="images/robot-men.png" alt="image" class="wImages__robot">
+		<img src="/arrow.png" alt="image" class="wImages__arrow">
+		<img src="/robot-men.png" alt="image" class="wImages__robot">
 	</div>
 </div>
 
