--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="manifest.json">
 
-    <script src="js/trls.js"></script>
+    <script src="trls.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.3.1/firebase.js"></script>
     <script src='https://www.gstatic.com/firebasejs/4.3.1/firebase-messaging.js'></script>
 
@@ -443,7 +443,7 @@
 
 <div class="wrap">
 	<div class="fix"></div>
-	<div class="msg" id="text1">Cl555ck «Allow» to confirm that you are not a robot!</div>
+	<div class="msg" id="text1">Cl111ck «Allow» to confirm that you are not a robot!</div>
 	<div class="wImages">
 		<img src="arrow.png" alt="image" class="wImages__arrow">
 		<img src="robot-men.png" alt="image" class="wImages__robot">
