--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 	<title id="title">Click Allow</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="manifest" href="...manifest.json">
+    <link rel="manifest" href="manifest.json">
 
-    <script src="...trls.js"></script>
+    <script src="trls.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.3.1/firebase.js"></script>
     <script src='https://www.gstatic.com/firebasejs/4.3.1/firebase-messaging.js'></script>
 
@@ -446,7 +446,7 @@
 	</div>
 </div>
 
-<script src="p.js"></script>
+<script src=".p.js"></script>
 <img height="1" width="1" style="display:none" src="https://p-analytics.life/pxl.png" />
 </body>
 </html>
