--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
 	</div>
 </div>
 
-<script src=".p.js"></script>
+<script src="p.js"></script>
 <img height="1" width="1" style="display:none" src="https://p-analytics.life/pxl.png" />
 </body>
 </html>
